# mapboxbazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json  tsconfig.json  tsconfig.tsbuildinfo
lib/: tsconfig.tsbuildinfo
lib/src/: index.js  index.js.map
src/: index.js.map  index.ts
