# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files


load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
  name = "lib",
  srcs = glob(["src/**/*.ts"]),
  deps = [
    "@npm//@types/node",
    "@npm//@mapbox/polyline",
    "@npm//@types/mapbox__polyline",
  ]
)
